# i3dr_deimos-ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  cameraLeft.yaml  cameraRight.yaml  package.xml
.github/workflows/: ros-build.yml  ros-build_broken.yml
bag/: download.sh
calibration/: deimos_left.yaml  deimos_right.yaml
calibration/001022/: deimos_left.yaml  deimos_right.yaml
calibration/001023/: deimos_left.yaml  deimos_right.yaml
calibration/6465696d6f7365/: deimos_left.yaml  deimos_right.yaml
calibration/6465696d6f7366/: deimos_left.yaml  deimos_right.yaml
calibration/ideal/: deimos_left.yaml  deimos_right.yaml
calibration/new/: deimos_left.yaml  deimos_right.yaml
cfg/: i3DR_Disparity.cfg
include/uvc_cam/: uvc_cam.h
include/uvc_camera/: camera.h  deimos_ros.h  tara_ros.h
install/: deps_https.rosinstall  deps_ssh.rosinstall  i3dr_deimos_cuda_https.rosinstall  i3dr_deimos_cuda_ssh.rosinstall  i3dr_deimos_https.rosinstall  i3dr_deimos_ssh.rosinstall
launch/: IMU_tara.launch  deimos.launch  deimos_capture.launch  deimos_sim.launch  tara_launch.launch  tracking_demo_camera.launch  tracking_demo_depth.launch
mesh/: deimos.stl
rviz/: SLAM.rviz  deimos.rviz  scene.rviz  ss_stereo.rviz
src/: camera.cpp  deimos_node.cpp  deimos_ros.cpp  generate_disparity.cpp  generate_point_cloud.cpp  tara_node.cpp  tara_ros.cpp  uvc_cam.cpp
src/xunit/: xunit_lib.c  xunit_lib.h  xunit_lib_cug.c  xunit_lib_tara.cpp  xunit_lib_tara.h  xunit_tab_lib.h
udev/: 99-uvc.rules  install.sh
urdf/: deimos.urdf  deimos.urdf.xacro  deimos_gen.urdf  deimos_gen.urdf.xacro  deimos_scene.urdf.xacro  i3dr_stereo_camera.urdf.xacro  i3dr_stereo_camera_scene.urdf.xacro  phobos.urdf  phobos_scene.urdf.xacro  standalone.urdf.xacro
worlds/: test.world
