<?xml version="1.0"?>
<package format="2">

  <name>i3dr_deimos</name>
  <version>0.3.1</version>
  <description>
     A collection of node(let)s that stream images from USB cameras (UVC)
     and provide CameraInfo messages to consumers. Includes a
     two-camera node that provides rough synchronization for stereo vision.
     Supports the See3CAM extensions for selecting the trigger mode.
     Uses the base driver from Morgan Quigley's uvc_cam package.
  </description>

  <maintainer email="jveitch@i3drobotics.com">Josh Veitch-Michaelis</maintainer>
  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="jveitch@i3drobotics.com">Josh Veitch-Michaelis</author>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>GPLv2</license>

  <url type="website">http://ros.org/wiki/see3cam</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>libv4l-dev</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>stereo_image_proc</depend>
  <depend>robot_state_publisher</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>i3dr_stereo_camera</depend>
  <depend>v4l-utils</depend>
  <depend>libudev-dev</depend>
</package>
